syntax = "proto3";

package service;

import "validate/validate.proto";

option go_package = "./;service";

service FileService {
  rpc Download(DownloadRequest) returns (stream DownloadResponse) {}
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse) {}
  rpc Upload(stream UploadRequest) returns (UploadResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message DownloadRequest {
  string name = 1 [(validate.rules).string.min_len = 1];
}

message DownloadResponse {
  bytes chunk = 1;
}

message File {
  bytes content = 1;
  MetaData metadata = 2;
}

message MetaData {
  string name = 1;
  int32 size = 2;
  string timestamp = 3;
}

message ListFilesRequest {}

message ListFilesResponse {
  repeated MetaData files = 1;
}

message UploadRequest {
  oneof content {
    string file_name = 1 [(validate.rules).string.min_len = 1];
    bytes chunk = 2 [(validate.rules).bytes.min_len = 1];
  }
}

message UploadResponse {}

message DeleteRequest {
  string name = 1 [(validate.rules).string.min_len = 1];
}

message DeleteResponse {}